# qualia

./: .gitignore  Cargo.toml  Pipfile  README.md  release.toml  rustfmt.toml  setup.py
features/: basic.feature  date-time.feature  queries.feature  undo.feature
features/steps/: database.py  objects.py  ops.py  setup.py  store.py  verifiers.py
qualia/: __init__.py  common.py  config.py  conversion.py  database.py  journal.py  lazy_import.py  main.py  parser.py  query.py  search.py  store.py
qualia/plugins/: image.py  magic.py
qualia_derive/: Cargo.toml
qualia_derive/src/: lib.rs
qualia_derive/tests/: attrs.rs  compile.rs  derive.rs  helpers.rs
qualia_derive/tests/compile-fail/: no-enums.rs  no-enums.stderr  no-unions.rs  no-unions.stderr  only-named-fields.rs  only-named-fields.stderr  only-related-to-shapes-with-id.rs  only-related-to-shapes-with-id.stderr  only-supported-field-types.rs  only-supported-field-types.stderr  only-supported-fixed-field-types.rs  only-supported-fixed-field-types.stderr
src/: collection.rs  commands.rs  common.rs  lib.rs  main.rs  object.rs  query.rs  query_builder.rs  store.rs
