[package]
name = "qualia"
description = "Basic semi-schemaless document store"
version = "0.7.0"

repository = "https://github.com/pianohacker/qualia"
license = "MPL-2.0"
authors = ["Jesse Weaver <pianohacker@gmail.com>"]
edition = "2018"

[dependencies]
qualia_derive = "0.1"
rusqlite = { version = "0.24", features = ["functions"] } # Ergonomic wrapper for SQLite
thiserror = "1.0" # derive(Error)
serde = { version = "1.0", features = ["derive"] } # A generic serialization/deserialization framework
serde_json = "1.0" # A JSON serialization file format
regex = "1.4" # An implementation of regular expressions for Rust. This implementation uses finite automata and gua…

[dev-dependencies]
tempfile = "3.1" # A library for managing a temporary directory and deleting all contents when it's dropped.
