[package]
name = "qualia_derive"
description = "Derive macros for Qualia"
version = "0.1.0"

repository = "https://github.com/pianohacker/qualia"
license = "MPL-2.0"
authors = ["Jesse Weaver <pianohacker@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "1.0"

[dev-dependencies]
predicates = "1.0"
syn = { version = "1.0", features = ["extra-traits", "full"] }
qualia = { path = "../qualia" }
tempfile = "3.1" # A library for managing a temporary directory and deleting all contents when it's dropped.
trybuild = "1.0" # Test harness for ui tests of compiler diagnostics
